[package]
name = "enum_utils"
version = "0.0.0"
authors = ["Luiz Chagas Jardim <luizchagasjardim@gmail.com>"]
description = "Macros for generating enum boilerplate"
keywords = ["enum", "proc_macro", "procmacro"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = "1.0"
convert_case = "0.6.0"
